# Stereo-Tracking

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  TrackingStereo.cbp  calibrate  calibrate_stereo  cmake_install.cmake  detection  matching  read  undistort_rectify
include/: Ball.h  Constants.h  LED.h  StereoMatching.h  matplotlibcpp.h  popt_pp.h
src/: Ball.cpp  LED.cpp  LEDDetection.cpp  StereoMatching.cpp  calib_single.cpp  calib_stereo.cpp  circle_detection.cpp  main.cpp  read_images.cpp  stereo_matching.cpp  undistort_rectify.cpp
